bug: 🐛 Fixing small bugs with spacing

--- a/src/styles/cartridge.css
+++ b/src/styles/cartridge.css
@@ -5,4 +5,5 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
+  unicode-range: U+000-5FF; /* Download only latin glyphs */
 }
